// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EC - Fact and figures 3 cols renders correctly 1`] = `
<div
  class="ecl-fact-figures ecl-fact-figures--col-3"
>
  <div
    class="ecl-fact-figures__items"
  >
    <div
      class="ecl-fact-figures__item"
    >
      <svg
        aria-hidden="true"
        class="ecl-icon ecl-icon--m ecl-fact-figures__icon"
        focusable="false"
      >
        <use
          xlink:href="/icons.svg#general--digital"
        />
      </svg>
      <div
        class="ecl-fact-figures__value"
      >
        00.0 million
      </div>
      <div
        class="ecl-fact-figures__title"
      >
        Lorem ipsum
      </div>
      <div
        class="ecl-fact-figures__description"
      >
        Nunc condimentum sapien ut nibh finibus suscipit vitae at justo. Morbi quis odio faucibus, commodo tortor id, elementum libero.
      </div>
    </div>
    <div
      class="ecl-fact-figures__item"
    >
      <svg
        aria-hidden="true"
        class="ecl-icon ecl-icon--m ecl-fact-figures__icon"
        focusable="false"
      >
        <use
          xlink:href="/icons.svg#general--digital"
        />
      </svg>
      <div
        class="ecl-fact-figures__value"
      >
        00.0 million
      </div>
      <div
        class="ecl-fact-figures__title"
      >
        Sed hendrerit
      </div>
      <div
        class="ecl-fact-figures__description"
      >
        Turpis varius congue venenatis, erat dui feugiat felis.
      </div>
    </div>
    <div
      class="ecl-fact-figures__item"
    >
      <svg
        aria-hidden="true"
        class="ecl-icon ecl-icon--m ecl-fact-figures__icon"
        focusable="false"
      >
        <use
          xlink:href="/icons.svg#general--digital"
        />
      </svg>
      <div
        class="ecl-fact-figures__value"
      >
        00.0 million
      </div>
      <div
        class="ecl-fact-figures__title"
      >
        Donec suscipit interdum augue, ac dapibus eros finibus a.
      </div>
      <div
        class="ecl-fact-figures__description"
      >
        Cras vestibulum efficitur mi, quis porta tellus rutrum ut. Quisque at pulvinar sem.
      </div>
    </div>
    <div
      class="ecl-fact-figures__item"
    >
      <svg
        aria-hidden="true"
        class="ecl-icon ecl-icon--m ecl-fact-figures__icon"
        focusable="false"
      >
        <use
          xlink:href="/icons.svg#general--digital"
        />
      </svg>
      <div
        class="ecl-fact-figures__value"
      >
        00.0 million
      </div>
      <div
        class="ecl-fact-figures__title"
      >
        Aenean dapibus
      </div>
      <div
        class="ecl-fact-figures__description"
      >
        Aliquam lacinia diam eu sem malesuada, in interdum ante bibendum.
      </div>
    </div>
    <div
      class="ecl-fact-figures__item"
    >
      <svg
        aria-hidden="true"
        class="ecl-icon ecl-icon--m ecl-fact-figures__icon"
        focusable="false"
      >
        <use
          xlink:href="/icons.svg#general--digital"
        />
      </svg>
      <div
        class="ecl-fact-figures__value"
      >
        00.0 million
      </div>
      <div
        class="ecl-fact-figures__title"
      >
        Aliquam faucibus nulla eget eleifend
      </div>
      <div
        class="ecl-fact-figures__description"
      >
        Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Duis nec lectus tortor.
      </div>
    </div>
    <div
      class="ecl-fact-figures__item"
    >
      <svg
        aria-hidden="true"
        class="ecl-icon ecl-icon--m ecl-fact-figures__icon"
        focusable="false"
      >
        <use
          xlink:href="/icons.svg#general--digital"
        />
      </svg>
      <div
        class="ecl-fact-figures__value"
      >
        00.0 million
      </div>
      <div
        class="ecl-fact-figures__title"
      >
        Nam lacinia nisl eget diam mattis
      </div>
      <div
        class="ecl-fact-figures__description"
      >
        Sed efficitur bibendum rutrum. Nunc feugiat congue augue ac consectetur.
      </div>
    </div>
  </div>
  <div
    class="ecl-fact-figures__view-all"
  >
    <a
      class="ecl-link ecl-link--standalone ecl-fact-figures__view-all-link"
      href="/example"
    >
      View all metrics
    </a>
  </div>
</div>
`;

exports[`EC - Fact and figures 3 cols renders correctly with extra attributes 1`] = `
<div
  class="ecl-fact-figures ecl-fact-figures--col-3"
  data-test="data-test-value"
  data-test-1="data-test-value-1"
>
  <div
    class="ecl-fact-figures__items"
  >
    <div
      class="ecl-fact-figures__item"
    >
      <svg
        aria-hidden="true"
        class="ecl-icon ecl-icon--m ecl-fact-figures__icon"
        focusable="false"
      >
        <use
          xlink:href="/icons.svg#general--digital"
        />
      </svg>
      <div
        class="ecl-fact-figures__value"
      >
        00.0 million
      </div>
      <div
        class="ecl-fact-figures__title"
      >
        Lorem ipsum
      </div>
      <div
        class="ecl-fact-figures__description"
      >
        Nunc condimentum sapien ut nibh finibus suscipit vitae at justo. Morbi quis odio faucibus, commodo tortor id, elementum libero.
      </div>
    </div>
    <div
      class="ecl-fact-figures__item"
    >
      <svg
        aria-hidden="true"
        class="ecl-icon ecl-icon--m ecl-fact-figures__icon"
        focusable="false"
      >
        <use
          xlink:href="/icons.svg#general--digital"
        />
      </svg>
      <div
        class="ecl-fact-figures__value"
      >
        00.0 million
      </div>
      <div
        class="ecl-fact-figures__title"
      >
        Sed hendrerit
      </div>
      <div
        class="ecl-fact-figures__description"
      >
        Turpis varius congue venenatis, erat dui feugiat felis.
      </div>
    </div>
    <div
      class="ecl-fact-figures__item"
    >
      <svg
        aria-hidden="true"
        class="ecl-icon ecl-icon--m ecl-fact-figures__icon"
        focusable="false"
      >
        <use
          xlink:href="/icons.svg#general--digital"
        />
      </svg>
      <div
        class="ecl-fact-figures__value"
      >
        00.0 million
      </div>
      <div
        class="ecl-fact-figures__title"
      >
        Donec suscipit interdum augue, ac dapibus eros finibus a.
      </div>
      <div
        class="ecl-fact-figures__description"
      >
        Cras vestibulum efficitur mi, quis porta tellus rutrum ut. Quisque at pulvinar sem.
      </div>
    </div>
    <div
      class="ecl-fact-figures__item"
    >
      <svg
        aria-hidden="true"
        class="ecl-icon ecl-icon--m ecl-fact-figures__icon"
        focusable="false"
      >
        <use
          xlink:href="/icons.svg#general--digital"
        />
      </svg>
      <div
        class="ecl-fact-figures__value"
      >
        00.0 million
      </div>
      <div
        class="ecl-fact-figures__title"
      >
        Aenean dapibus
      </div>
      <div
        class="ecl-fact-figures__description"
      >
        Aliquam lacinia diam eu sem malesuada, in interdum ante bibendum.
      </div>
    </div>
    <div
      class="ecl-fact-figures__item"
    >
      <svg
        aria-hidden="true"
        class="ecl-icon ecl-icon--m ecl-fact-figures__icon"
        focusable="false"
      >
        <use
          xlink:href="/icons.svg#general--digital"
        />
      </svg>
      <div
        class="ecl-fact-figures__value"
      >
        00.0 million
      </div>
      <div
        class="ecl-fact-figures__title"
      >
        Aliquam faucibus nulla eget eleifend
      </div>
      <div
        class="ecl-fact-figures__description"
      >
        Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Duis nec lectus tortor.
      </div>
    </div>
    <div
      class="ecl-fact-figures__item"
    >
      <svg
        aria-hidden="true"
        class="ecl-icon ecl-icon--m ecl-fact-figures__icon"
        focusable="false"
      >
        <use
          xlink:href="/icons.svg#general--digital"
        />
      </svg>
      <div
        class="ecl-fact-figures__value"
      >
        00.0 million
      </div>
      <div
        class="ecl-fact-figures__title"
      >
        Nam lacinia nisl eget diam mattis
      </div>
      <div
        class="ecl-fact-figures__description"
      >
        Sed efficitur bibendum rutrum. Nunc feugiat congue augue ac consectetur.
      </div>
    </div>
  </div>
  <div
    class="ecl-fact-figures__view-all"
  >
    <a
      class="ecl-link ecl-link--standalone ecl-fact-figures__view-all-link"
      href="/example"
    >
      View all metrics
    </a>
  </div>
</div>
`;

exports[`EC - Fact and figures 3 cols renders correctly with extra class names 1`] = `
<div
  class="ecl-fact-figures ecl-fact-figures--col-3 custom-class custom-class--test"
>
  <div
    class="ecl-fact-figures__items"
  >
    <div
      class="ecl-fact-figures__item"
    >
      <svg
        aria-hidden="true"
        class="ecl-icon ecl-icon--m ecl-fact-figures__icon"
        focusable="false"
      >
        <use
          xlink:href="/icons.svg#general--digital"
        />
      </svg>
      <div
        class="ecl-fact-figures__value"
      >
        00.0 million
      </div>
      <div
        class="ecl-fact-figures__title"
      >
        Lorem ipsum
      </div>
      <div
        class="ecl-fact-figures__description"
      >
        Nunc condimentum sapien ut nibh finibus suscipit vitae at justo. Morbi quis odio faucibus, commodo tortor id, elementum libero.
      </div>
    </div>
    <div
      class="ecl-fact-figures__item"
    >
      <svg
        aria-hidden="true"
        class="ecl-icon ecl-icon--m ecl-fact-figures__icon"
        focusable="false"
      >
        <use
          xlink:href="/icons.svg#general--digital"
        />
      </svg>
      <div
        class="ecl-fact-figures__value"
      >
        00.0 million
      </div>
      <div
        class="ecl-fact-figures__title"
      >
        Sed hendrerit
      </div>
      <div
        class="ecl-fact-figures__description"
      >
        Turpis varius congue venenatis, erat dui feugiat felis.
      </div>
    </div>
    <div
      class="ecl-fact-figures__item"
    >
      <svg
        aria-hidden="true"
        class="ecl-icon ecl-icon--m ecl-fact-figures__icon"
        focusable="false"
      >
        <use
          xlink:href="/icons.svg#general--digital"
        />
      </svg>
      <div
        class="ecl-fact-figures__value"
      >
        00.0 million
      </div>
      <div
        class="ecl-fact-figures__title"
      >
        Donec suscipit interdum augue, ac dapibus eros finibus a.
      </div>
      <div
        class="ecl-fact-figures__description"
      >
        Cras vestibulum efficitur mi, quis porta tellus rutrum ut. Quisque at pulvinar sem.
      </div>
    </div>
    <div
      class="ecl-fact-figures__item"
    >
      <svg
        aria-hidden="true"
        class="ecl-icon ecl-icon--m ecl-fact-figures__icon"
        focusable="false"
      >
        <use
          xlink:href="/icons.svg#general--digital"
        />
      </svg>
      <div
        class="ecl-fact-figures__value"
      >
        00.0 million
      </div>
      <div
        class="ecl-fact-figures__title"
      >
        Aenean dapibus
      </div>
      <div
        class="ecl-fact-figures__description"
      >
        Aliquam lacinia diam eu sem malesuada, in interdum ante bibendum.
      </div>
    </div>
    <div
      class="ecl-fact-figures__item"
    >
      <svg
        aria-hidden="true"
        class="ecl-icon ecl-icon--m ecl-fact-figures__icon"
        focusable="false"
      >
        <use
          xlink:href="/icons.svg#general--digital"
        />
      </svg>
      <div
        class="ecl-fact-figures__value"
      >
        00.0 million
      </div>
      <div
        class="ecl-fact-figures__title"
      >
        Aliquam faucibus nulla eget eleifend
      </div>
      <div
        class="ecl-fact-figures__description"
      >
        Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Duis nec lectus tortor.
      </div>
    </div>
    <div
      class="ecl-fact-figures__item"
    >
      <svg
        aria-hidden="true"
        class="ecl-icon ecl-icon--m ecl-fact-figures__icon"
        focusable="false"
      >
        <use
          xlink:href="/icons.svg#general--digital"
        />
      </svg>
      <div
        class="ecl-fact-figures__value"
      >
        00.0 million
      </div>
      <div
        class="ecl-fact-figures__title"
      >
        Nam lacinia nisl eget diam mattis
      </div>
      <div
        class="ecl-fact-figures__description"
      >
        Sed efficitur bibendum rutrum. Nunc feugiat congue augue ac consectetur.
      </div>
    </div>
  </div>
  <div
    class="ecl-fact-figures__view-all"
  >
    <a
      class="ecl-link ecl-link--standalone ecl-fact-figures__view-all-link"
      href="/example"
    >
      View all metrics
    </a>
  </div>
</div>
`;

exports[`EC - Fact and figures 4 cols renders correctly 1`] = `
<div
  class="ecl-fact-figures ecl-fact-figures--col-4"
>
  <div
    class="ecl-fact-figures__items"
  >
    <div
      class="ecl-fact-figures__item"
    >
      <svg
        aria-hidden="true"
        class="ecl-icon ecl-icon--m ecl-fact-figures__icon"
        focusable="false"
      >
        <use
          xlink:href="/icons.svg#general--digital"
        />
      </svg>
      <div
        class="ecl-fact-figures__value"
      >
        00.0 million
      </div>
      <div
        class="ecl-fact-figures__title"
      >
        Lorem ipsum
      </div>
      <div
        class="ecl-fact-figures__description"
      >
        Nunc condimentum sapien ut nibh finibus suscipit vitae at justo. Morbi quis odio faucibus, commodo tortor id, elementum libero.
      </div>
    </div>
    <div
      class="ecl-fact-figures__item"
    >
      <svg
        aria-hidden="true"
        class="ecl-icon ecl-icon--m ecl-fact-figures__icon"
        focusable="false"
      >
        <use
          xlink:href="/icons.svg#general--digital"
        />
      </svg>
      <div
        class="ecl-fact-figures__value"
      >
        00.0 million
      </div>
      <div
        class="ecl-fact-figures__title"
      >
        Sed hendrerit
      </div>
      <div
        class="ecl-fact-figures__description"
      >
        Turpis varius congue venenatis, erat dui feugiat felis.
      </div>
    </div>
    <div
      class="ecl-fact-figures__item"
    >
      <svg
        aria-hidden="true"
        class="ecl-icon ecl-icon--m ecl-fact-figures__icon"
        focusable="false"
      >
        <use
          xlink:href="/icons.svg#general--digital"
        />
      </svg>
      <div
        class="ecl-fact-figures__value"
      >
        00.0 million
      </div>
      <div
        class="ecl-fact-figures__title"
      >
        Donec suscipit interdum augue, ac dapibus eros finibus a.
      </div>
      <div
        class="ecl-fact-figures__description"
      >
        Cras vestibulum efficitur mi, quis porta tellus rutrum ut. Quisque at pulvinar sem.
      </div>
    </div>
    <div
      class="ecl-fact-figures__item"
    >
      <svg
        aria-hidden="true"
        class="ecl-icon ecl-icon--m ecl-fact-figures__icon"
        focusable="false"
      >
        <use
          xlink:href="/icons.svg#general--digital"
        />
      </svg>
      <div
        class="ecl-fact-figures__value"
      >
        00.0 million
      </div>
      <div
        class="ecl-fact-figures__title"
      >
        Aenean dapibus
      </div>
      <div
        class="ecl-fact-figures__description"
      >
        Aliquam lacinia diam eu sem malesuada, in interdum ante bibendum.
      </div>
    </div>
  </div>
  <div
    class="ecl-fact-figures__view-all"
  >
    <a
      class="ecl-link ecl-link--standalone ecl-fact-figures__view-all-link"
      href="/example"
    >
      View all metrics
    </a>
  </div>
</div>
`;

exports[`EC - Fact and figures 4 cols renders correctly with extra attributes 1`] = `
<div
  class="ecl-fact-figures ecl-fact-figures--col-4"
  data-test="data-test-value"
  data-test-1="data-test-value-1"
>
  <div
    class="ecl-fact-figures__items"
  >
    <div
      class="ecl-fact-figures__item"
    >
      <svg
        aria-hidden="true"
        class="ecl-icon ecl-icon--m ecl-fact-figures__icon"
        focusable="false"
      >
        <use
          xlink:href="/icons.svg#general--digital"
        />
      </svg>
      <div
        class="ecl-fact-figures__value"
      >
        00.0 million
      </div>
      <div
        class="ecl-fact-figures__title"
      >
        Lorem ipsum
      </div>
      <div
        class="ecl-fact-figures__description"
      >
        Nunc condimentum sapien ut nibh finibus suscipit vitae at justo. Morbi quis odio faucibus, commodo tortor id, elementum libero.
      </div>
    </div>
    <div
      class="ecl-fact-figures__item"
    >
      <svg
        aria-hidden="true"
        class="ecl-icon ecl-icon--m ecl-fact-figures__icon"
        focusable="false"
      >
        <use
          xlink:href="/icons.svg#general--digital"
        />
      </svg>
      <div
        class="ecl-fact-figures__value"
      >
        00.0 million
      </div>
      <div
        class="ecl-fact-figures__title"
      >
        Sed hendrerit
      </div>
      <div
        class="ecl-fact-figures__description"
      >
        Turpis varius congue venenatis, erat dui feugiat felis.
      </div>
    </div>
    <div
      class="ecl-fact-figures__item"
    >
      <svg
        aria-hidden="true"
        class="ecl-icon ecl-icon--m ecl-fact-figures__icon"
        focusable="false"
      >
        <use
          xlink:href="/icons.svg#general--digital"
        />
      </svg>
      <div
        class="ecl-fact-figures__value"
      >
        00.0 million
      </div>
      <div
        class="ecl-fact-figures__title"
      >
        Donec suscipit interdum augue, ac dapibus eros finibus a.
      </div>
      <div
        class="ecl-fact-figures__description"
      >
        Cras vestibulum efficitur mi, quis porta tellus rutrum ut. Quisque at pulvinar sem.
      </div>
    </div>
    <div
      class="ecl-fact-figures__item"
    >
      <svg
        aria-hidden="true"
        class="ecl-icon ecl-icon--m ecl-fact-figures__icon"
        focusable="false"
      >
        <use
          xlink:href="/icons.svg#general--digital"
        />
      </svg>
      <div
        class="ecl-fact-figures__value"
      >
        00.0 million
      </div>
      <div
        class="ecl-fact-figures__title"
      >
        Aenean dapibus
      </div>
      <div
        class="ecl-fact-figures__description"
      >
        Aliquam lacinia diam eu sem malesuada, in interdum ante bibendum.
      </div>
    </div>
  </div>
  <div
    class="ecl-fact-figures__view-all"
  >
    <a
      class="ecl-link ecl-link--standalone ecl-fact-figures__view-all-link"
      href="/example"
    >
      View all metrics
    </a>
  </div>
</div>
`;

exports[`EC - Fact and figures 4 cols renders correctly with extra class names 1`] = `
<div
  class="ecl-fact-figures ecl-fact-figures--col-4 custom-class custom-class--test"
>
  <div
    class="ecl-fact-figures__items"
  >
    <div
      class="ecl-fact-figures__item"
    >
      <svg
        aria-hidden="true"
        class="ecl-icon ecl-icon--m ecl-fact-figures__icon"
        focusable="false"
      >
        <use
          xlink:href="/icons.svg#general--digital"
        />
      </svg>
      <div
        class="ecl-fact-figures__value"
      >
        00.0 million
      </div>
      <div
        class="ecl-fact-figures__title"
      >
        Lorem ipsum
      </div>
      <div
        class="ecl-fact-figures__description"
      >
        Nunc condimentum sapien ut nibh finibus suscipit vitae at justo. Morbi quis odio faucibus, commodo tortor id, elementum libero.
      </div>
    </div>
    <div
      class="ecl-fact-figures__item"
    >
      <svg
        aria-hidden="true"
        class="ecl-icon ecl-icon--m ecl-fact-figures__icon"
        focusable="false"
      >
        <use
          xlink:href="/icons.svg#general--digital"
        />
      </svg>
      <div
        class="ecl-fact-figures__value"
      >
        00.0 million
      </div>
      <div
        class="ecl-fact-figures__title"
      >
        Sed hendrerit
      </div>
      <div
        class="ecl-fact-figures__description"
      >
        Turpis varius congue venenatis, erat dui feugiat felis.
      </div>
    </div>
    <div
      class="ecl-fact-figures__item"
    >
      <svg
        aria-hidden="true"
        class="ecl-icon ecl-icon--m ecl-fact-figures__icon"
        focusable="false"
      >
        <use
          xlink:href="/icons.svg#general--digital"
        />
      </svg>
      <div
        class="ecl-fact-figures__value"
      >
        00.0 million
      </div>
      <div
        class="ecl-fact-figures__title"
      >
        Donec suscipit interdum augue, ac dapibus eros finibus a.
      </div>
      <div
        class="ecl-fact-figures__description"
      >
        Cras vestibulum efficitur mi, quis porta tellus rutrum ut. Quisque at pulvinar sem.
      </div>
    </div>
    <div
      class="ecl-fact-figures__item"
    >
      <svg
        aria-hidden="true"
        class="ecl-icon ecl-icon--m ecl-fact-figures__icon"
        focusable="false"
      >
        <use
          xlink:href="/icons.svg#general--digital"
        />
      </svg>
      <div
        class="ecl-fact-figures__value"
      >
        00.0 million
      </div>
      <div
        class="ecl-fact-figures__title"
      >
        Aenean dapibus
      </div>
      <div
        class="ecl-fact-figures__description"
      >
        Aliquam lacinia diam eu sem malesuada, in interdum ante bibendum.
      </div>
    </div>
  </div>
  <div
    class="ecl-fact-figures__view-all"
  >
    <a
      class="ecl-link ecl-link--standalone ecl-fact-figures__view-all-link"
      href="/example"
    >
      View all metrics
    </a>
  </div>
</div>
`;

exports[`EC - Fact and figures with validation enabled and missing input data returns the right warning message 1`] = `
<div
  class="ecl-fact-figures ecl-fact-figures--col-3"
>
  <div
    class="ecl-fact-figures__items"
  >
    <div
      class="ecl-fact-figures__item"
    >
      <svg
        aria-hidden="true"
        class="ecl-icon ecl-icon--m ecl-fact-figures__icon"
        focusable="false"
      >
        <use
          xlink:href="/icons.svg#general--digital"
        />
      </svg>
      <div
        class="ecl-fact-figures__title"
      >
        Lorem ipsum
      </div>
      <div
        class="ecl-fact-figures__description"
      >
        Nunc condimentum sapien ut nibh finibus suscipit vitae at justo. Morbi quis odio faucibus, commodo tortor id, elementum libero.
      </div>
    </div>
    <div
      class="ecl-fact-figures__item"
    >
      <svg
        aria-hidden="true"
        class="ecl-icon ecl-icon--m ecl-fact-figures__icon"
        focusable="false"
      >
        <use
          xlink:href="/icons.svg#general--digital"
        />
      </svg>
      <div
        class="ecl-fact-figures__value"
      >
        00.0 million
      </div>
      <div
        class="ecl-fact-figures__title"
      >
        Sed hendrerit
      </div>
      <div
        class="ecl-fact-figures__description"
      >
        Turpis varius congue venenatis, erat dui feugiat felis.
      </div>
    </div>
    <div
      class="ecl-fact-figures__item"
    >
      <svg
        aria-hidden="true"
        class="ecl-icon ecl-icon--m ecl-fact-figures__icon"
        focusable="false"
      >
        <use
          xlink:href="/icons.svg#general--digital"
        />
      </svg>
      <div
        class="ecl-fact-figures__value"
      >
        00.0 million
      </div>
      <div
        class="ecl-fact-figures__title"
      >
        Donec suscipit interdum augue, ac dapibus eros finibus a.
      </div>
      <div
        class="ecl-fact-figures__description"
      >
        Cras vestibulum efficitur mi, quis porta tellus rutrum ut. Quisque at pulvinar sem.
      </div>
    </div>
    <div
      class="ecl-fact-figures__item"
    >
      <svg
        aria-hidden="true"
        class="ecl-icon ecl-icon--m ecl-fact-figures__icon"
        focusable="false"
      >
        <use
          xlink:href="/icons.svg#general--digital"
        />
      </svg>
      <div
        class="ecl-fact-figures__value"
      >
        00.0 million
      </div>
      <div
        class="ecl-fact-figures__title"
      >
        Aenean dapibus
      </div>
      <div
        class="ecl-fact-figures__description"
      >
        Aliquam lacinia diam eu sem malesuada, in interdum ante bibendum.
      </div>
    </div>
    <div
      class="ecl-fact-figures__item"
    >
      <svg
        aria-hidden="true"
        class="ecl-icon ecl-icon--m ecl-fact-figures__icon"
        focusable="false"
      >
        <use
          xlink:href="/icons.svg#general--digital"
        />
      </svg>
      <div
        class="ecl-fact-figures__value"
      >
        00.0 million
      </div>
      <div
        class="ecl-fact-figures__title"
      >
        Aliquam faucibus nulla eget eleifend
      </div>
      <div
        class="ecl-fact-figures__description"
      >
        Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Duis nec lectus tortor.
      </div>
    </div>
    <div
      class="ecl-fact-figures__item"
    >
      <svg
        aria-hidden="true"
        class="ecl-icon ecl-icon--m ecl-fact-figures__icon"
        focusable="false"
      >
        <use
          xlink:href="/icons.svg#general--digital"
        />
      </svg>
      <div
        class="ecl-fact-figures__value"
      >
        00.0 million
      </div>
      <div
        class="ecl-fact-figures__title"
      >
        Nam lacinia nisl eget diam mattis
      </div>
      <div
        class="ecl-fact-figures__description"
      >
        Sed efficitur bibendum rutrum. Nunc feugiat congue augue ac consectetur.
      </div>
    </div>
  </div>
  <div
    class="ecl-fact-figures__view-all"
  >
    <a
      class="ecl-link ecl-link--standalone ecl-fact-figures__view-all-link"
      href="/example"
    >
      View all metrics
    </a>
    <span
      class="ecl-u-type-color-green ecl-compliance-inner ecl-compliance-success ecl-u-ma-2xs"
      title="[link--standalone] - ecl compliant"
    >
      <svg
        aria-hidden="true"
        class="ecl-icon ecl-icon--xs"
        focusable="false"
      >
        <use
          xlink:href="/icons.svg#notifications--success"
        />
      </svg>
    </span>
  </div>
</div>
`;
